Div's not aligned correctly

--- a/page-design/style.css
+++ b/page-design/style.css
@@ -105,20 +105,50 @@ h2{
     border: solid 5px rgb(235,232,231) ;
     border-radius: 8px;   
 }
-.for{
-    margin-top: 20px;
+
+h3{ 
+    color:#7477b9;
+    font-weight: bolder;
+    margin-top: 60px;
+    height: 30px;
+    margin-left: 180px;
 }
 .back{
     display:flex;
     background-color:rgb(235,232,231) ;
     height: 400px;
+    align-content: center;
 }
 .backsecond{
     display:flex;
-    height: 180px;
+    height: 160px;
     background-color: #7477b9;
 }
 
+.table{
+   display: flex;
+   margin-top: 160px;
+}
+.formbox{
+    display: flex;
+    height: 360px;
+    width: 500px;
+    border: #bd9dea solid  4px;
+    border-radius: 8px;
+    justify-self: center;
+    background-color: rgb(235,232,231);
+}
+.formrigth{
+    display: flex;
+    height: 360px;
+    width:300px;
+    border: rgb(235,232,231) solid 4px;
+    /*margin-top: 160px;*/
+    margin-left: 1px;
+    border-radius: 8px;
+    background-color: #bd9dea;
+    
+}
 
 
 
@@ -128,6 +158,6 @@ h2{
 footer{
     display: flex;
     height: 40px;
-    background-color:#e2b241 ;
+    background-color:#ffc94b ;
     border-top:rgb(235,232,231) solid 2px ;
 }
